edited paragraph on Membership page and image resize issue on mobile view

--- a/website/frontend/styles/CleanAirPage.scss
+++ b/website/frontend/styles/CleanAirPage.scss
@@ -776,7 +776,7 @@
 
             .splitSection-img {
               float: none;
-              height: auto;
+              height: 100%;
               width: 100%;
               max-height: 450px;
               object-fit: contain;
@@ -943,7 +943,7 @@
 
             .splitSection-img {
               float: none;
-              height: 200px;
+              height: 100%;
               width: 100%;
               object-fit: contain;
               border-radius: 8px;
